--- a/Css-Border/Border.html
+++ b/Css-Border/Border.html
@@ -4,64 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Border Stilleri</title>
-    <style>
-     .dotted{
-        border-style:dotted;
-        border-color:fuchsia;
-        border-width:7px;
-    }
-    .dashed{
-        border-style:dashed;
-        border-color:dodgerblue;
-        border-width:7px;
-
-    }
-    .solid{
-        border-style:solid;
-        border-color:cadetblue;
-        border-width:7px;
-
-    }
-    .double{
-        border-style:double;
-        border-color:crimson;
-        border-width:7px;
-
-    }
-    .groove{
-        border-style:groove;
-        border-color:deeppink;
-        border-width:7px;
-
-    }
-    .inset{
-        border-style:inset;
-        border-color: gold;
-        border-width:7px;
-
-    }
-    .outset{
-        border-style:outset;
-       border-color: indianred; 
-       border-width:7px;
-
-    }
-    .mix{
-        border-style:dotted dashed solid double;
-        border-width: 15px;
-        border-color: greenyellow;
-    }
-    .radius{
-        border: 5px dashed purple;
-        border-radius: 10px;
-    }
-    h1{
-        color:indigo;
-    }
-    p{
-        font-size: 20px;
-    }
-    </style>
+    <link rel="stylesheet" href="Css.css">
+    
 </head>
 <body>
     <h1>Dotted Border</h1>
